[project]
name = "maibert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "huggingface-hub>=0.33.1",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "torch>=2.7.1",
    "transformers>=4.53.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.66.0",
    "wordcloud>=1.9.4",
    "datasets>=3.6.0",
    "jupyterlab>=4.4.4",
    "pef>=1.1.0",
    "peft>=0.16.0",
]
